--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function goFullscreen() {
                         <h1 class="text-3xl">Speel</h1>
                       </div>
 
-                      <div id="nu" class="p-2 text-center w-1/3 cursor-pointer hover:text-blue-500 transition ease-in-out animate-bounce bg-black bg-opacity-5 rounded-lg
+                      <div id="nu" class="p-2 text-center w-1/3 cursor-pointer hover:text-blue-500 transition ease-in-out animate-bounce shadow-blue-500 shadow-2xl bg-black bg-opacity-5 rounded-lg
                       " style=""                onclick="swbt('nu')">
                         <h1 class="text-3xl ">Nuus</h1>
                       </div>
@@ -64,10 +64,10 @@ function goFullscreen() {
                       <h1 class="text-5xl font-bold pb-3">NUUS</h1>
                       
 
-                      <h1 class="text-2xl">Login stelsel</h1>
-                      <h1 class="text-lg text-wrap max-w-[420px]">Ek werk nou aan n beter login stelsel, want die ander enes het mense die hele tyd uitgeskop.</h1>
-                      <h1 class="text-2xl pt-1">SkyBlock</h1>
-                      <h1 class="text-lg text-wrap max-w-[420px]">Ek is seker julle almal weet wat SkyBlock is. Die goeie nuus is dit kom na die UnikaSMP toe later!</h1>
+                      <h1 class="text-2xl">Eksamen</h1>
+                      <h1 class="text-lg text-wrap max-w-[420px]">Hallo julle! Met die eksamen wat kom kan ek nie baie updates maak tot dit eindig nie. Jammer.</h1>
+                      <h1 class="text-2xl pt-1">"Auto Tree Farm"</h1>
+                      <h1 class="text-lg text-wrap max-w-[420px]">Lukas het my laat weet dat hy gaan n Tree Farm bou vir die gemeenskap om te gebruik.</h1>
                     </div>
                     <div id="Dko" class="w-full h-full p-5">
                       <h1 class="text-5xl font-bold pb-3">KONTAK VIR MY</h1>
@@ -124,18 +124,20 @@ function goFullscreen() {
                           elem = document.getElementById('nu');
                           if (elem.classList.contains('animate-bounce')) {
                             elem.classList.remove('animate-bounce')
+                            elem.classList.remove('shadow-2xl')
                           };
                         }
                       }
                       swbt('us')
 
-                      const NEWSVER = '!1!';
+                      const NEWSVER = '!2!';
                       var cv = localStorage.getItem('unikasmp.newsver');
                       if (cv!=null) {
                         if (cv==NEWSVER) {
                           console.log('rming')
                           elem = document.getElementById('nu')
                           elem.classList.remove('animate-bounce')
+                          elem.classList.remove('shadow-2xl')
                         } else {
                           console.log(cv)
                         }
