--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@ function goFullscreen() {
                     <div id="Dnu" class="w-full h-full p-5">
                       <h1 class="text-5xl font-bold pb-3">NUUS</h1>
                       
-                      <h1 class="text-2xl pt-1">Login Stelsel</h1>
-                      <h1 class="text-lg text-wrap max-w-[420px]">Die wagwoord stelsel sal in wees by saterdag of sondag. Wees reg as jy gevra word om een te maak!</h1>
-                      <h1 class="text-2xl">Eksamen</h1>
-                      <h1 class="text-lg text-wrap max-w-[420px]">Hallo julle! Met die eksamen wat kom kan ek nie baie updates maak tot dit eindig nie. Jammer.</h1>
+                      <h1 class="text-2xl pt-1">Nuwe /home features.</h1>
+                      <h1 class="text-lg text-wrap max-w-[420px]">Om meer as een home te maak, gebruik /sethome [NAAM] en dan /home [NAAM] om daantoe te gaan.</h1>
+                      <h1 class="text-2xl">UnikaSMP op selfone</h1>
+                      <h1 class="text-lg text-wrap max-w-[420px]">Ek probeer nou laat UnikaSMP werk op selfone, maar ek is nie seker of ek dit kan klaar kry nie.</h1>
 
                     </div>
                     <div id="Dko" class="w-full h-full p-5">
@@ -130,7 +130,7 @@ function goFullscreen() {
                       }
                       swbt('us')
 
-                      const NEWSVER = '!3!';
+                      const NEWSVER = '!4!';
                       var cv = localStorage.getItem('unikasmp.newsver');
                       if (cv!=null) {
                         if (cv==NEWSVER) {
