--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
         object-fit: cover;
     }
 
+    @keyframes scroll {
+            0% {
+                transform: translateY(60%);
+            }
+            100% {
+                transform: translateY(-100%);
+            }
+        }
 
+        .scrolling-text {
+            animation: scroll 29s linear infinite;
+            
+        }
 
     </style>
 </head>
@@ -53,11 +65,19 @@
         <div class="flex justify-center items-center flex-col space-y-6">
             <h1 class="text-7xl bungee select-none"><tag class="font-mono">unika</tag>SMP</h1>
 
-            <div class="p-2 text-white bg-black bg-opacity-80 rounded-md">
-                <h1 class="text-2xl pt-1">Nuwe /home features.</h1>
+            <div class="p-2 text-white bg-black bg-opacity-80 rounded-md overflow-hidden h-64">
+              <div class="scrolling-text pt-1">
+                <h1 class="text-4xl bungee text-blue-300">Server Nuus</h1>
+                <h1 class="text-2xl font-semibold">Nuwe /home features</h1>
                 <h1 class="text-lg text-wrap max-w-[420px]">Om meer as een home te maak, gebruik /sethome [NAAM] en dan /home [NAAM] om daantoe te gaan.</h1>
-                <h1 class="text-2xl animate-pulse font-bold">Krag probleme</h1>
-                <h1 class="text-lg text-wrap max-w-[420px] animate-pulse">Die server het 'n paar probleme, bv die krag trip die hele tyd. So ons sal nie aanlyn die hele tyd wees nie.</h1>
+                <h1 class="text-2xl font-semibold">Nuwe updates</h1>
+                <h1 class="text-lg text-wrap max-w-[420px]">As jy hierdie sien is ek besig om te jag, so daar gaan nie nuwe updates vir n ruk wees nie.</h1>
+                <h1 class="text-4xl bungee text-blue-300 pt-4">Gemeenskap Nuus</h1>
+                <h1 class="text-2xl font-semibold">SkyTopia nuus</h1>
+                <h1 class="text-lg text-wrap max-w-[420px]">Omdat SkyTopia so naby aan spawn is, is dit n goeie idee om uit te trek.</h1>
+                <h1 class="text-2xl font-semibold">Jou wereld, jou nuus</h1>
+                <h1 class="text-lg text-wrap max-w-[420px]">Kontak vir my op WhatsApp as jy jou eie nuus hier wil he.</h1>
+              </div>
             </div>
             <div class="w-full p-2 bg-blue-500 text-white hover:bg-white hover:text-blue-500 rounded-sm bungee text-2xl text-center cursor-pointer
             ring-2 ring-white select-none" id="wtx"
