--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="flex justify-center items-center flex-col space-y-6">
             <h1 class="text-7xl bungee select-none"><tag class="font-mono">unika</tag>SMP</h1>
 
-            <div class="p-2 text-white bg-black bg-opacity-80 rounded-md overflow-hidden h-64">
+            <div class="p-2 text-white bg-black bg-opacity-80 rounded-md overflow-hidden h-56">
               <div class="scrolling-text pt-1">
                 <h1 class="text-4xl bungee text-blue-300">Server Nuus</h1>
                 <h1 class="text-2xl font-semibold">Nuwe /home features</h1>
@@ -85,6 +85,11 @@
             <div class="w-full p-2 bg-red-500 text-white hover:bg-white hover:text-red-500 rounded-sm bungee text-2xl text-center cursor-pointer
             ring-2 ring-white select-none hidden" id="tku"
             onclick="tekenuit()">Teken Uit</div>
+            <h1 class="pt-0"></h1>
+            <div class="w-full p-2 bg-lime-300 text-black hover:bg-black hover:text-lime-300 rounded-sm bungee text-2xl text-center cursor-pointer
+            ring-2 ring-white select-none" id="wtx"
+            onclick="window.location.href = 'https://unikagames.github.io'"><tag class="font-sans font-bold">unika</tag>Games 
+            <tag class="font-sans font-extrabold pl-5 animate-ping">NUUT</tag></div>
         </div>
     </div>
     
