--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
                 <h1 class="text-lg text-wrap max-w-[420px]">Kontak vir my op WhatsApp as jy jou eie nuus hier wil he.</h1>
               </div>
             </div>
-            <div class="w-full p-2 bg-blue-500 text-white hover:bg-white hover:text-blue-500 rounded-sm bungee text-2xl text-center cursor-pointer
-            ring-2 ring-white select-none" id="wtx"
-            onclick="window.location.href = 'client.html#justlaunched'">Speel op UnikaSMP</div>
-            <div class="w-full p-2 bg-red-500 text-white hover:bg-white hover:text-red-500 rounded-sm bungee text-2xl text-center cursor-pointer
-            ring-2 ring-white select-none hidden" id="tku"
-            onclick="tekenuit()">Teken Uit</div>
+
+            <div class="w-full">
+              <div class="w-full p-2 bg-blue-500 text-white hover:bg-white hover:text-blue-500 rounded-t-sm bungee text-2xl text-center cursor-pointer
+              ring-2 ring-white select-none" id="wtx"
+              onclick="window.location.href = 'client.html#justlaunched'">Speel op UnikaSMP</div>
+              <div class="w-full p-2 bg-red-500 text-white hover:bg-white hover:text-red-500 rounded-b-sm bungee text-2xl text-center cursor-pointer
+              ring-2 ring-white select-none hidden" id="tku"
+              onclick="tekenuit()">Teken Uit</div>
+            </div>
             <h1 class="pt-0"></h1>
             <div class="w-full p-2 bg-lime-300 text-black hover:bg-black hover:text-lime-300 rounded-sm bungee text-2xl text-center cursor-pointer
             ring-2 ring-white select-none" id="wtx"
