--- a/register.html
+++ b/register.html
@@ -115,7 +115,7 @@
 
       const user = localStorage.getItem("RawUserName")
 
-      const socket = new WebSocket('wss://craftoria.ddns.net:8443/ws');
+      const socket = new WebSocket('wss://234712047.r3g.uk:8443/ws');
       
       function sendm(dat){
         socket.send(JSON.stringify(dat));
